--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "doubly link",
     "double link"
   ],
-  "author": "Manuel Miglioranza",
-  "license": "UNLICENSED",
+  "author": "Manuel Agustin Miglioranza",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/mmiglioranza22/tierlist-maker-clone/issues"
   },
